--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,7 +22,8 @@ body {
 #app-container,
 nav,
 #welcome,
-footer {
+footer,
+.auth {
     background-color: #002233;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23001e2f' fill-opacity='0.6'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E");
 }
@@ -42,4 +43,8 @@ input {
     border-radius: 8px; /* Custom border radius */
     background-color: #f9fafb; /* Custom background color */
     color: black !important;
+}
+
+.stat-container {
+    @apply flex flex-col justify-between w-full p-4 text-white border-4 shadow-lg rounded-xl gap-y-3 sm:flex-row gap-x-2 md:w-1/2 bg-dark/70 shadow-slate-200/20 border-dark;
 }
